--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>SupermanSB World</title>
 </head>
 <body>
-<h1>Hello SupermanSB </h1>
+<h1 th:text="${greeting}"></h1>
 </body>
 </html>
