--- a/src/main/resources/templates/customer.html
+++ b/src/main/resources/templates/customer.html
@@ -1,36 +1,44 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://www.thymeleaf.org">
+<html xmlns:layout="http://www.w3.org/1999/xhtml"
+      layout:decorate="~{fragments/main_layout}"
+      xmlns:th="https://www.thymeleaf.org">
 
-<head>
-    <meta charset="UTF-8">
-    <title>Customer</title>
-</head>
-<body>
 
+<div class="container" layout:fragment="content">
 <h1>Register Customer</h1>
-    <form action="#" th:action="@{/customer}" method="post">
-        <label for="inputId">Id</label>
-        <input type="input" name="id" id="inputId">
+     <form action="#" th:action="@{/customer}" method="post">
+        <div class="form-group">
+             <label for="inputId">Id</label>
+            <input type="input" class="form-control" name="id" id="inputId">
+        </div>
+         <div class="form-group">
         <label for="inputName">Name</label>
-        <input type="input" name="name" id="inputName">
+        <input type="input" class="form-control" name="name" id="inputName">
+         </div>
+         <div class="form-group">
         <label for="inputPin">Pin</label>
-        <input type="input" name="pin" id="inputPin">
-        <input type="submit" value="Register">
+        <input type="input" class="form-control" name="pin" id="inputPin">
+         </div>
+         <div class="form-group">
+        <input type="submit" value="Register"class="btn btn-success">
+         </div>
     </form>
 <hr>
 
 <h1>All Customers</h1>
 
-<table border="1px">
-    <tr><th>Id</th> <th>Name</th><th>Pin</th></tr>
-
-    <tr th:each="customer : ${allCustomers}">
-        <td th:text="${customer.id}"></td>
-        <td th:text="${customer.name}"></td>
-        <td th:text="${customer.pin}"></td>
-    </tr>
-
+<table class="table table-striped" border="1px">
+    <thead class="thead-dark">
+        <tr><th>Id</th> <th>Name</th><th>Pin</th></tr>
+    </thead>
+    <tbody >
+        <tr th:each="customer : ${allCustomers}">
+            <td th:text="${customer.id}"></td>
+            <td th:text="${customer.name}"></td>
+            <td th:text="${customer.pin}"></td>
+        </tr>
+    </tbody>
 </table>
+</div>
 
-</body>
 </html>
