--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://www.thymeleaf.org">
+<html xmlns:layout="http://www.w3.org/1999/xhtml"
+      layout:decorate="~{fragments/main_layout}"
+      xmlns:th="https://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <title>SupermanSB World</title>
-    <link th:rel="stylesheet" th:href="@{css/bootstrap.min.css}"/>
-    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap" rel="stylesheet">
-    <link th:rel="stylesheet" th:href="@{css/mystyle.css}">
 </head>
 <body>
-    <div class="container">
+    <div layout:fragment="content" class="container">
         <div class="jumbotron">
             <h1 class="display-4 my-font" th:text="${greeting}"></h1>
             <p><a th:href="@{/customer}">Customer Registration</a></p>
